ユーザ別に表示

--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 
+  <h1>新規登録画面</h1>
+
   <form method="post">
     <label for="username">名前</label>
     <input name="username" id="username" required>
