--- a/flaskr/templates/blog/detail.html
+++ b/flaskr/templates/blog/detail.html
@@ -1,9 +1,18 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<h1>detail.html</h1>
-<h1>{{id}}</h1>
-<p>説明文</p>
-<a href="{{url_for('blog.ordered', id=id)}}">確定</a>
+<h1>詳細画面</h1>
+
+<ul>
+    <li>id:{{menu["id"]}}</li>
+    <li>料理名:{{menu["menuname"]}}</li>
+    <li>img:{{menu["img"]}}</li>
+    <li>朝昼晩:{{menu["eattime"]}}</li>
+    <li>タイプ:{{menu["type"]}}</li>
+    <li>カロリー:{{menu["calorie"]}}</li>
+    <li>説明文:{{menu["details"]}}</li>
+</ul>
+
+<a href="{{url_for('blog.ordered', user_id=user_id, menu_id=menu_id)}}">確定</a>
 
 {% endblock %}
