パラメータをnameに変更

--- a/flaskr/templates/blog/log.html
+++ b/flaskr/templates/blog/log.html
@@ -6,7 +6,7 @@
 {% for log in logs %}
     <ul>
         <li>id:{{log["id"]}}</li>
-        <li>ユーザID:{{log["userid"]}}</li>
+        <li>ユーザ名:{{log["username"]}}</li>
         <li>メニューID:{{log["menuid"]}}</li>
         <li>料理名:{{log["menuname"]}}</li>
         <li>img:{{log["img"]}}</li>
