--- a/flaskr/templates/blog/detail.html
+++ b/flaskr/templates/blog/detail.html
@@ -13,6 +13,6 @@
     <li>説明文:{{menu["details"]}}</li>
 </ul>
 
-<a href="{{url_for('blog.ordered', user_name=user_name, menu_id=menu_id)}}">確定</a>
+<a href="{{url_for('blog.profile', user_name=user_name, menu_id=menu_id)}}">確定</a>
 
 {% endblock %}
