--- a/flaskr/templates/blog/top.html
+++ b/flaskr/templates/blog/top.html
@@ -5,6 +5,7 @@
     <h1>Health Check Delivery</h1>
     <a href={{url_for('auth.login')}}>ログイン</a>
     <a href={{url_for('auth.register')}}>新規登録</a>
+    <a href={{url_for('auth.description')}}>新規登録</a>
 <div>
 
 {% endblock %}
