--- a/flaskr/templates/blog/profile.html
+++ b/flaskr/templates/blog/profile.html
@@ -3,6 +3,7 @@
 
 <h1>プロフィールページ</h1>
 <a href={{url_for('blog.log', user_name=user_name)}}>食事履歴</a>
+<a href={{url_for('blog.update_1', user_name=user_name)}}>プロフィール編集</a>
 <h1>ユーザ名：{{ user_name }}</h1>
 <h1>BMI：{{ bmi }}</h1>
 
