新規登録画面を分割

--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -10,6 +10,12 @@
     <input type="password" name="password" id="password" required>
     <label for="address">住所</label>
     <input name="address" id="address" required>
+    <label for="tel">電話番号</label>
+    <input name="tel" id="tel" required>
+    <label for="mail">メールアドレス</label>
+    <input name="mail" id="mail">
+
+<!---
     <label for="weight">体重</label>
     <input name="weight" id="weight" required>
     <label for="height">身長</label>
@@ -19,6 +25,7 @@
     <input type="radio" name="course" value="health">標準健康コース
     <input type="radio" name="course" value="diet">ダイエットコース
     <input type="radio" name="course" value="muscle">筋肉コース
+  -->
     <input type="submit" value="Register">
   </form>
 
