編集画面・機能

--- a/flaskr/templates/auth/description.html
+++ b/flaskr/templates/auth/description.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <h1>Health Check Delivery とは？</h1>
-<a href={{url_for('auth.register')}}>Let's Start</a>
+<p>アプリケーションの説明</p>
+<a href={{url_for('auth.register')}}>はじめる</a>
 
 {% endblock %}
