--- a/flaskr/templates/auth/profile.html
+++ b/flaskr/templates/auth/profile.html
@@ -4,14 +4,13 @@
   <h1>プロフィール設定</h1>
 
   <form method="post">
-    <label for="weight">体重</label>
+    <label for="weight">体重（kg）</label>
     <input name="weight" id="weight" required>
-    <label for="height">身長</label>
+    <label for="height">身長（cm）</label>
     <input name="height" id="height" required>
     <input type="radio" name="gender" value="male">男性
     <input type="radio" name="gender" value="female">女性
-  
-    <input type="submit" value="Register">
+    <input type="submit" value="アレルギー設定へ">
   </form>
 
 {% endblock %}
