--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -12,21 +12,9 @@
     <input name="address" id="address" required>
     <label for="tel">電話番号</label>
     <input name="tel" id="tel" required>
-    <label for="mail">メールアドレス</label>
+    <label for="mail">メールアドレス（任意）</label>
     <input name="mail" id="mail">
-
-<!---
-    <label for="weight">体重</label>
-    <input name="weight" id="weight" required>
-    <label for="height">身長</label>
-    <input name="height" id="height" required>
-    <input type="radio" name="gender" value="male">男性
-    <input type="radio" name="gender" value="female">女性
-    <input type="radio" name="course" value="health">標準健康コース
-    <input type="radio" name="course" value="diet">ダイエットコース
-    <input type="radio" name="course" value="muscle">筋肉コース
-  -->
-    <input type="submit" value="Register">
+    <input type="submit" value="プロフィール説明へ">
   </form>
 
 {% endblock %}
