--- a/flaskr/templates/auth/allergies.html
+++ b/flaskr/templates/auth/allergies.html
@@ -12,7 +12,7 @@
     <input type="checkbox" name="allergies" value="peanuts">ピーナッツ
     <input type="checkbox" name="allergies" value="soba">蕎麦
 
-    <input type="submit" value="Register">
+    <input type="submit" value="設定を終了する">
   </form>
 
 {% endblock %}
