--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -4,11 +4,12 @@
   <h1>ログイン画面</h1>
 
   <form method="post">
-    <label for="username">Username</label>
+    <label for="username">ユーザ名</label>
     <input name="username" id="username" required>
-    <label for="password">Password</label>
+    <label for="password">パスワード</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+    <input type="submit" value="ログイン">
   </form>
+  <a href={{url_for('auth.description')}}>はじめての方はこちら</a>
   
 {% endblock %}
