--- a/flaskr/templates/blog/top.html
+++ b/flaskr/templates/blog/top.html
@@ -4,7 +4,7 @@
 <div class="top">
     <h1>Health Check Delivery</h1>
     <a href={{url_for('auth.login')}}>ログイン</a>
-    <a href={{url_for('auth.register')}}>新規登録</a>
+    <!--<a href={{url_for('auth.register')}}>新規登録</a>-->
     <a href={{url_for('auth.description')}}>新規登録</a>
 <div>
 
