--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -12,10 +12,12 @@
 </head>
 <body>
   <header>   
+    {% block header %}
+    {% endblock %}
   </header>
   <main>
-      {% block content %}
-      {% endblock %}
+    {% block content %}
+    {% endblock %}
   </main>
   <footer>
       <small>© 2020 Health-Check-Delivery by 生活B</small>
