--- a/flaskr/templates/blog/order.html
+++ b/flaskr/templates/blog/order.html
@@ -7,13 +7,9 @@
 {% for menu in menus %}
     <a href="{{ url_for("blog.detail", user_name=user_name, menu_id=menu["id"]) }}">
         <ul>
-            <li>id:{{menu["id"]}}</li>
+            <li><img src="{{url_for('static', filename='img/menu/' + menu["img"]) }}" width="500" alt=""></li>
             <li>料理名:{{menu["menuname"]}}</li>
-            <li>img:{{menu["img"]}}</li>
-            <li>朝昼晩:{{menu["eattime"]}}</li>
-            <li>タイプ:{{menu["type"]}}</li>
             <li>カロリー:{{menu["calorie"]}}</li>
-            <li>説明文:{{menu["details"]}}</li>
         </ul>
     </a>
 {% endfor %}
