--- a/flaskr/templates/blog/detail.html
+++ b/flaskr/templates/blog/detail.html
@@ -11,8 +11,11 @@
 </ul>
 
 <h2>配達時間を選択してください</h2>
-<p><input type="time" name="example" min="07:00" max="11:00" step="1800" value="08:00"></p>
 
-<a href="{{url_for('blog.profile', user_name=user_name, menu_id=menu_id)}}">注文</a>
+<form action="{{url_for('blog.check', user_name=user_name, menu_id=menu_id)}}" method="POST">
+    <input type="time" name="delivery_time" min="07:00" max="11:00" step="1800" value="08:00">
+    <input type="submit" value="注文">
+</form>
+
 
 {% endblock %}
