--- a/flaskr/templates/blog/profile.html
+++ b/flaskr/templates/blog/profile.html
@@ -4,7 +4,7 @@
 <ul>
     <li><a href={{url_for('blog.update_1', user_name=user_name)}}>プロフィール編集</a></li>
     <li><a href={{url_for('blog.log', user_name=user_name)}}>注文履歴</a></li>
-    <li><a href="">配達状況</a></li>
+    <li><a href={{url_for('blog.status', user_name=user_name)}}>配達状況</a></li>
     <li><a href="">Q&A</a></li>
     <li><a href="">利用規約</a></li>
 </ul>
@@ -14,7 +14,7 @@
 
 <img src="{{url_for('static', filename='img/type/'+ img_type + '_' + img_gender + '.jpg') }}" width="500" alt="">
 <h1>{{ user_name }}さん</h1>
-<p>あなたは{{type_bmi}}です<br>{{type_disc}}<p>
+<p>あなたは{{bmi_type}}です<br>{{disc_type}}<p>
 
 <p><a href={{url_for('blog.menu', user_name=user_name, bmi=bmi, eat_time="morning")}}>明日の朝食を決める</a></p>
 <p><a href={{url_for('blog.menu', user_name=user_name, bmi=bmi, eat_time="lunch")}}>明日の昼食を決める</a></p>
