--- a/flaskr/templates/blog/top.html
+++ b/flaskr/templates/blog/top.html
@@ -3,8 +3,8 @@
 
 <div class="top">
     <h1>Health Check Delivery</h1>
+    <p><img src="{{url_for('static', filename='img/logo/logo1.PNG') }}" width="500" alt=""></p>
     <a href={{url_for('auth.login')}}>ログイン</a>
-    <!--<a href={{url_for('auth.register')}}>新規登録</a>-->
     <a href={{url_for('auth.description')}}>新規登録</a>
 <div>
 
