--- a/flaskr/templates/blog/detail.html
+++ b/flaskr/templates/blog/detail.html
@@ -4,7 +4,7 @@
 <h1>詳細画面</h1>
 
 <ul>
-    <li><img src="{{url_for('static', filename='img/menu/' + menu["img"]) }}" width="500" alt=""></li>
+    <li><img src="{{url_for('static', filename='img/menu/' + menu["img"]) }}" alt=""></li>
     <li>料理名:{{menu["menuname"]}}</li>
     <li>カロリー:{{menu["calorie"]}}</li>
     <li>説明文:{{menu["details"]}}</li>
@@ -12,7 +12,7 @@
 
 <h2>配達時間を選択してください</h2>
 
-<form action="{{url_for('blog.check', user_name=user_name, menu_id=menu_id)}}" method="POST">
+<form action="{{url_for('blog.check', user_name=user_name, menu_id=menu_id, eat_time=eat_time)}}" method="POST">
     <input type="time" name="delivery_time" min="07:00" max="11:00" step="1800" value="08:00">
     <input type="submit" value="注文">
 </form>
